vlib/v/parser/tests/expr_evaluated_but_not_used_or.vv
fn main() {
  f() or {
    0
    1
  }
}

fn f() ?int {
  return none
}
